# egresocovid19-server

./: .coveragerc  .gitignore  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml
egresocovid19/: __main__.py  database.py  enums.py  main.py  seedbed.py  settings.py
egresocovid19/api/v1/: auth.py  main.py  schemas.py
egresocovid19/api/v1/controllers/: __init__.py  auth_controller.py  autocomplete_controller.py  example_controller.py  patients_controller.py  provinces_controller.py
egresocovid19/api/v1/schemas/: patient_schemas.py
egresocovid19/cli/: __init__.py  code.py  db.py  users.py
egresocovid19/exceptions/: bad_request.py  forbidden.py  not_found.py
egresocovid19/services/: auth_service.py  autocomplete_service.py  province_service.py
egresocovid19/static/: municipality_codes.py  provinces_codes.py
egresocovid19/utils/: bad_request_response.py  base_entity.py  detail_schema.py  forbidden_response.py  not_found_response.py  run_sync.py
tests/: shared_dict.py  test_auth_controller.py  test_autocomplete_controller.py  test_cli_app.py  test_egresocovid19.py  test_patients_controller.py  test_provinces_controller.py
