[tool.poetry]
name = "egresocovid19"
version = "0.0.1"
description = "Egreso COVID-19 server implementation with FastAPI"
authors = ["Leynier Gutiérrez González <leynier41@gmail.com>"]
homepage = "https://github.com/codestrange/egresocovid19-server"
repository = "https://github.com/codestrange/egresocovid19-server"
documentation = "https://github.com/codestrange/egresocovid19-server"
readme = "README.md"

[tool.poetry.scripts]
egresocovid19 = "egresocovid19.cli:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.7.0"
fastapi = {extras = ["all"], version = "^0.92.0"}
python-dotenv = "^1.0.0"
fastapi-restful = {extras = ["all"], version = "^0.4.3"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
beanie = "^1.17.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
flake8 = "^5.0.4"
black = "^23.1"
isort = "^5.12.0"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.20.3"
mimesis = "^7.0.0"
pytest-depends = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
